--- a/GroveLab/GroveLab.Demo/Pages/Index.razor
+++ b/GroveLab/GroveLab.Demo/Pages/Index.razor
@@ -4,6 +4,8 @@
 
 <ToggleButton @bind-Enabled="TogglerState" />
 
+<ToggleSwitch @bind-Enabled="TogglerState" />
+
 <div>Toggler Is:@TogglerState</div>
 
 @code {
