--- a/GroveLab/GroveLab/Components/ToggleSwitch.razor
+++ b/GroveLab/GroveLab/Components/ToggleSwitch.razor
@@ -1,4 +1,3 @@
 ﻿@inherits TogglerBase
 
-@* <input type="checkbox" checked="@Enabled" id="switch" /><label for="switch">Toggle</label> *@
-<input type="checkbox" checked="@Enabled" @oninput="CheckboxChanged" id="switch" /><label for="switch">Toggle</label>
+<input type="checkbox" checked="@Enabled" @oninput="CheckboxChanged" id="ToggleSwitch-checkbox" /><label for="ToggleSwitch-checkbox">Toggle</label>
